overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-service    # < name of the service
  namespace: overseerr # < namespace where place the deployment and pods
spec:
  selector:
    app: overseerr # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 5055
